Support brightness for rainbow and baby bow animation Support length for baby bow animation Fix horizontal scroll bar (range) issue when min > 1

--- a/ui2/src/button-edit/RangeEditor.css
+++ b/ui2/src/button-edit/RangeEditor.css
@@ -1,4 +1,5 @@
 .range-editor {
     height: 40px;
     padding: 15px 24px;
+    margin: 14px 0px;
 }
